--- a/public/league.html
+++ b/public/league.html
@@ -21,8 +21,17 @@
   </head>
   <body>
   <div ng-include="'components/navbar.html'"></div>
-  <div ng-include="'components/jumbotron.html'"></div>
-
+  <div class="container-fluid">
+   <div class="row">
+   <div class="col-md-4 col-md-offset-4" ng-controller="clubDropDown">
+   <select>
+    <option ng-click="{{article.selected = league.value}}" ng-repeat="league in leagues" value="league.value">{{league.name}}</option>
+   </select>
+   <select >   
+   </select>
+   </div>    
+</div>
+  </div>
     
   </body>
 </html>
