--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JogaBonito Viz</title>
     <script type="text/javascript" src="/js/angular.min.js"></script>
     <script type="text/javascript" src="/js/controllers.js"></script>
@@ -22,6 +21,7 @@
   <body>
   <div ng-include="'components/navbar.html'"></div>
   <div ng-include="'components/jumbotron.html'"></div>
+  <div ng-include="'components/footer.html'"></div>
 
     
   </body>
