--- a/public/league.html
+++ b/public/league.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JogaBonito Viz</title>
     <script type="text/javascript" src="/js/angular.min.js"></script>
     <script type="text/javascript" src="/js/controllers.js"></script>
+     <script type="text/javascript" src="/js/main.js"></script>
+     <script type="text/javascript" src="/js/graphs.js"></script>
+     <script type="text/javascript" src="/js/d3.min.js"></script>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -22,16 +24,21 @@
   <body>
   <div ng-include="'components/navbar.html'"></div>
   <div class="container-fluid">
-   <div class="row">
-   <div class="col-md-4 col-md-offset-4" ng-controller="clubDropDown">
-   <select>
-    <option ng-click="{{league.selected = league.value}}" ng-repeat="league in leagues" value="{{league.value}}">{{league.name}}</option>
-   </select>
-   <select >
-    <option ng-click="league.year = season.value" ng-repeat="season in seasons" value="{{season.value}}">{{season.name}}</option>  
-   </select>
-   <button ng-click="response()"> Viz!</button>
-   </div>    
+   <div class="row col-md-4 col-md-offset-4">
+     <div  class="btn-group btn-group-lg" ng-controller="clubDropDown">
+     <select id="league-selector" class="btn btn-default btn-lg">
+        <option ng-repeat="league in leagues" value="{{league.value}}">{{league.name}}</option>
+     </select>
+     <select id="season-selector" class="btn btn-default btn-lg">
+      <option ng-repeat="season in seasons" value="{{season.value}}">{{season.name}}</option>  
+     </select>
+     <button onclick="graph()" class="btn btn-default btn-lg"> Graph!</button>
+     </div>
+   <div class="graph-container"> 
+   <div id="graph">
+     
+   </div> 
+   </div>  
 </div>
   </div>
     
